--- a/chatapp/templates/chatapp/chatroom.html
+++ b/chatapp/templates/chatapp/chatroom.html
@@ -16,9 +16,21 @@
 
         <div class="row">
             
-            <h2 class="text-center bg-dark text-light py-4">Chat Room</h2>
+            <h2 class="text-center bg-dark text-light py-4">Chat Room - {{chatroom.name}} </h2>
 
-            <a href="#" class="">{{ chatroom.name }}</a>
+            <form method='post'>
+                {% csrf_token %}
+
+                <div class="input-group mb-3 mt-4">
+                  <input type="text" class="form-control" placeholder="Message" aria-label="Message">
+                  <button class="btn btn-outline-primary">Button</button>
+                </div>
+
+            </form>
+
+            <div>
+                <p>{{ chatroom.slug|json_script:"json-chatroomname" }} </p>
+            </div>
 
         </div>  
                        
@@ -29,6 +41,34 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+
+    <script>
+
+        const chatRoomName = JSON.parse(document.getElementById('json-chatroomname').textContent);
+        console.log(chatRoomName);
+
+        const chatSocket = new WebSocket(
+            'ws://'
+            +window.location.host
+            +'/ws/'
+            +chatRoomName
+            +'/'
+        );
+        console.log("ChatSockect here is : ",chatSocket);
+
+        
+
+        chatSocket.onmessage = function(e) {
+            // const data = JSON.parse(e.data);
+            console.log("This is a message.");
+        };
+
+        chatSocket.onclose = function(e) {
+            console.log('Chat socket closed.');
+        };
+
+    </script>
 
 
   </body>
