--- a/chatapp/templates/chatapp/chatroom.html
+++ b/chatapp/templates/chatapp/chatroom.html
@@ -1,52 +1,64 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends "chatapp/base.html" %}
+{% load static %}
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+{% block title %}
+    {{chatroom.name}} | LiveChat
+{% endblock title %}
 
-    <title>Chat Room</title>
-  </head>
-  <body>
+
+
+{% block content %}
 
     <div class="container my-5">
 
         <div class="row">
             
-            <h2 class="text-center bg-dark text-light py-4">Chat Room - {{chatroom.name}} </h2>
+            <h2 class="text-center bg-dark text-light py-4">Chat Room - {{chatroom.name}}
+                <br> <span class="text-success">{{ user.username }} </span>
+            </h2>
+
+            
+            <div class="my-4" id="chat-messages">
+                {% for message in chat_messages %}
+                <div class="shadow p-2 pt-4 mb-3 bg-body rounded px-4 bg-dark">
+                    <p class="text-success fw-bold p-0 m-0">@{{ message.user.username }}</p> 
+                    <p class="text-dark fw-normal p-0 m-0 fs-5 py-2">{{ message.message }}</p> 
+                    <p class="text-gray fw-light p-0 m-0 fst-italic">{{ message.date }}</p> 
+                </div>
+                {% endfor %}
+            </div>
+        
 
             <form method='post'>
                 {% csrf_token %}
 
                 <div class="input-group mb-3 mt-4">
-                  <input type="text" class="form-control" placeholder="Message" aria-label="Message">
-                  <button class="btn btn-outline-primary">Button</button>
+                <input id="message-input" type="text" class="form-control" placeholder="Message" aria-label="Message">
+                <button class="btn btn-outline-primary" id="send-button">Button</button>
                 </div>
 
             </form>
-
+            
             <div>
                 <p>{{ chatroom.slug|json_script:"json-chatroomname" }} </p>
+                <p>{{ request.user.username|json_script:"json-username" }} </p>
+                
             </div>
 
         </div>  
-                       
+                    
     </div>
 
+{% endblock content %}
 
 
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+{% block scripts %}
 
     <script>
 
         const chatRoomName = JSON.parse(document.getElementById('json-chatroomname').textContent);
-        console.log(chatRoomName);
+        const userName = JSON.parse(document.getElementById('json-username').textContent);
+        console.log(chatRoomName, userName);
 
         const chatSocket = new WebSocket(
             'ws://'
@@ -54,22 +66,47 @@
             +'/ws/'
             +chatRoomName
             +'/'
-        );
+        )
         console.log("ChatSockect here is : ",chatSocket);
 
         
 
         chatSocket.onmessage = function(e) {
-            // const data = JSON.parse(e.data);
-            console.log("This is a message.");
-        };
+            const data = JSON.parse(e.data);
+            if (data.message){
+                console.log('Received message to cleint is : ',data.message, data.username, data.room)
+
+                let html = data.username + ' : ' + data.message + '</br>'
+                document.getElementById('chat-messages').innerHTML += html
+
+            }else{
+                alert('This message was empty')
+            }
+            // console.log("This is a message.");
+        }
 
         chatSocket.onclose = function(e) {
             console.log('Chat socket closed.');
+        }
+
+
+        document.getElementById('send-button').onclick = function(e) {
+            e.preventDefault()
+
+            const messageInput = document.getElementById('message-input')
+            const message = messageInput.value;
+            messageInput.value = '';
+            chatSocket.send(JSON.stringify({
+                'message': message,
+                'username': userName,
+                'room': chatRoomName,
+                
+            }));
+            messageInput.value = '';
+            // console.log("Message is : ",message, "Username is : ",userName, "Room is : ",chatRoomName)
+
         };
 
     </script>
 
-
-  </body>
-</html>
+{% endblock scripts %}
